<resources>
    <string name="app_name">Stargazers viewer</string>
    <string name="action_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Search User</string>
    <string name="second_fragment_label">Stargazers</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_home_fragment">Nothing to show</string>
    <string name="search_view_hint">Search here user or repo</string>
    <string name="avatar">Avatar of user</string>
    <string name="login_username">Your email</string>
    <string name="login_password">Your password</string>
    <string name="login">Login</string>
    <string name="three_characters">Please insert at least three characters for searching</string>
    <string name="network_exception">"Network error, please try again "</string>
    <string name="nothing_found">Nothing to show</string>
    <string name="user_already_logged">Already logged in</string>
    <string name="owner">GitHub username</string>
    <string name="repo">Repository name</string>
    <string name="title_activity_init">InitActivity</string>

    <string name="action_settings">Settings</string>
    <string name="search_stargazers">SEARCH</string>
    <string name="user_needed">User needed</string>
    <string name="repo_needed">Repo needed</string>
    <string name="public_repo">Public</string>
</resources>