<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bindViewModel"
            type="it.giaquinto.stargazersviewer.ui.viewmodel.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_primary"
        tools:context=".ui.fragment.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/double_avatar_image"
                android:layout_height="@dimen/double_avatar_image"
                android:layout_marginTop="@dimen/extra_high_margin"
                android:src="@drawable/github_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/xxl_margin"
                android:layout_marginStart="@dimen/high_margin"
                android:layout_marginEnd="@dimen/high_margin"
                android:padding="@dimen/standard_padding"
                android:background="@drawable/rounded_corner"
                app:layout_constraintTop_toBottomOf="@+id/logo">

                <EditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:hint="@string/login_password"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/primary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mail" />
            </LinearLayout>

            <Button
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_violet"
                android:text="@string/login"
                android:textColor="@color/primary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateTint="@color/purple_700"
                app:layout_constraintBottom_toTopOf="@+id/card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>